14/01/2021 desasoyGlucosaProject desa favoritosDone

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <span class="material-icons sizeC2 favorite">
                       favorite_border
                     </span>
-                    <span class="material-icons sizeC2 favorite2">
+                    <span class="material-icons sizeC2 favorite2 escon">
                       favorite
                     </span>
                   </button>
@@ -94,41 +94,110 @@
                               <table class="table">
                                 <thead class="thead-dark">
                                   <tr class="">
-                                    <th class="" style="width: 30%;"></th>
-                                    <th class="" style="width: 40%;">Producto</th>
-                                    <th class="" style="width: 30%;">Precio</th>
+                                    <th class="" style="width: 25%;">
+                                      <label class="d-flex justify-content-left"></label> 
+                                    </th>
+                                    <th class="" style="width: 25%;">
+                                      <label class="d-flex justify-content-left">Producto</label> 
+                                    </th>
+                                    <th class="" style="width: 25%;">
+                                      <label class="d-flex justify-content-center">Precio</label> 
+                                    </th>
+                                    <th class="" style="width: 25%;">
+                                      <label class="d-flex justify-content-center"></label> 
+                                    </th>
                                   </tr>
                                 </thead>
                                 <tbody>
                                   <tr class="disappear1a">
-                                    <td>
+                                    <!-- <td class="align-middle">
                                       <label class="imagen col-md-2" style="border: 1px solid green;">
-                                        <button class="test1">x</button>
                                         <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
-                                      <label class="description col-md-4">Mermelada de frutilla</label> 
+                                    </td> -->
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="" >
+                                        <img class="col-md-6" src="imagenes/frutilla.png"alt="" style="border: 1px solid black;">
+                                        <!-- <button class="test1 btn">x</button> -->
+                                      </div>
                                     </td>
-                                    <td>Mermerlada de Frutilla</td>
-                                    <td>250$</td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="" >
+                                        <p >Mermelada de frutilla</p>
+                                      </div>
+                                    </td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="d-flex justify-content-center"> 
+                                        <p>$250</p>
+                                      </div>
+                                    </td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <!-- <button class="test1 btn">x</button>
+                                      <button class="test1 btn">x</button> -->
+                                      <div class="d-flex justify-content-center"> 
+                                        <button type="button" class="btn btn-success botonFa">Agregar al Carrito</button>
+                                        <button type="button" class="btn btn-warning botonFa">Eliminar </button>
+                                      </div>
+                                    </td>
                                   </tr>
                                   <tr class="disappear2a">
-                                    <td>
+                                    <!-- <td class="align-middle">
                                       <label class="imagen col-md-2" style="border: 1px solid green;">
-                                        <button class="test1">x</button>
-                                        <img class="card-img-top" src="imagenes/manzana.png"alt="Card image cap"></label>
-                                      <label class="description col-md-4">Mermelada de frutilla</label> 
+                                        <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
+                                    </td> -->
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="" >
+                                        <img class="col-md-6" src="imagenes/manzana.png"alt="" style="border: 1px solid black;">
+                                        <!-- <button class="test1 btn">x</button> -->
+                                      </div>
                                     </td>
-                                    <td>Mermerlada de Manzana y Pera</td>
-                                    <td>270$</td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="" >
+                                        <p >Mermelada de Manzana y Pera</p>
+                                      </div>
+                                    </td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="d-flex justify-content-center"> 
+                                        <p>$270</p>
+                                      </div>
+                                    </td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <!-- <button class="test1 btn">x</button>
+                                      <button class="test1 btn">x</button> -->
+                                      <div class="d-flex justify-content-center"> 
+                                        <button type="button" class="btn btn-success botonFa">Agregar al Carrito</button>
+                                        <button type="button" class="btn btn-warning botonFa">Eliminar </button>
+                                      </div>
+                                    </td>
                                   </tr>
                                   <tr class="disappear3a">
-                                    <td>
+                                    <!-- <td class="align-middle">
                                       <label class="imagen col-md-2" style="border: 1px solid green;">
-                                        <button class="test1">x</button>
-                                        <img class="card-img-top" src="imagenes/naranja.png"alt="Card image cap"></label>
-                                      <label class="description col-md-4">Mermelada de frutilla</label> 
+                                        <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
+                                    </td> -->
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="" >
+                                        <img class="col-md-6" src="imagenes/naranja.png"alt="" style="border: 1px solid black;">
+                                        <!-- <button class="test1 btn">x</button> -->
+                                      </div>
                                     </td>
-                                    <td>Mermerlada de Naranja</td>
-                                    <td>260$</td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="" >
+                                        <p >Mermelada de Naranja</p>
+                                      </div>
+                                    </td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <div class="d-flex justify-content-center"> 
+                                        <p>$270</p>
+                                      </div>
+                                    </td>
+                                    <td class="align-middle" style="width: 25%;">
+                                      <!-- <button class="test1 btn">x</button>
+                                      <button class="test1 btn">x</button> -->
+                                      <div class="d-flex justify-content-center"> 
+                                        <button type="button" class="btn btn-success botonFa">Agregar al Carrito</button>
+                                        <button type="button" class="btn btn-warning botonFa">Eliminar </button>
+                                      </div>
+                                    </td>
                                   </tr>
                                 </tbody>
                               </table>
@@ -138,7 +207,7 @@
                         
                         <!-- Modal footer -->
                         <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-secondary btn-dark" data-dismiss="modal">Cerrar</button>
                         </div>
                         
                       </div>
@@ -193,7 +262,7 @@
                                         <td class="column-1 align-middle" >
                                           <div class="d-flex justify-content-left align-items-center" >
                                             <img class="" src="imagenes/frutilla.png"alt="" >
-                                            <button class="test1 btn"  >x</button>
+                                            <button class="test1 btn">x</button>
                                           </div>
                                         </td>
                                         <td class="column-2 align-middle" >
@@ -480,8 +549,8 @@
       </section>
       <br>
       <!--intro-->
-      <section id="intro">
-        <div class="container">
+      <section id="intro" style="border: 1px solid red;">
+        <div class="container col-md-6" style="border: 1px solid green;">
           <div class="row">
             <div class="col-md-6">
               <h3 class="">Bienvenidos</h3>
@@ -508,8 +577,8 @@
       </section>
       <br>
       <!-- Productos -->
-      <section id="productos">
-        <div class="container col-md-8">
+      <section id="productos" style="border: 1px solid red;">
+        <div class="container col-md-6" style="border: 1px solid green;">
           <div class="row">
             <div class="col-md-6">
               <div class="d-flex justify-content-center">
@@ -517,10 +586,13 @@
                   <img class="card-img-top" src="imagenes/frutilla.png" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Frutilla</h5>
-                    <p class="card-text text-justify product">Mermelada 100% natural elaborada con las frutillas mas frescas. Reducida en azucar.</p>
+                    <p class="card-text product">Mermelada 100% natural elaborada con las frutillas mas frescas. Reducida en azucar.</p>
                       <button type="button" class="btn favoritos" data-toggle="" data-target=""  accesskey="addFrutillaF">
-                        <span class="material-icons" accesskey="addFrutillaF">
+                        <span class="material-icons favoriteF" accesskey="addFrutillaF">
                           favorite_border
+                        </span>
+                        <span class="material-icons sizeC2 favorite3 escon" accesskey="addFrutillaF">
+                          favorite
                         </span>
                       </button>
                   </div>
@@ -571,8 +643,11 @@
                     <h5 class="card-title">Manzana y Pera</h5>
                     <p class="card-text product">Mermelada casera que aprovecha como método de conservación los azúcares saludables que las frutas.</p>
                       <button type="button" class="btn favoritos" data-toggle="" data-target="" accesskey="addManzanaF">
-                        <span class="material-icons" accesskey="addManzanaF">
+                        <span class="material-icons favoriteM" accesskey="addManzanaF">
                           favorite_border
+                        </span>
+                        <span class="material-icons sizeC2 favorite4 escon" accesskey="addManzanaF">
+                          favorite
                         </span>
                       </button>
                   </div>
@@ -624,11 +699,14 @@
                   <img class="card-img-top" src="imagenes/naranja.png" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Naranja</h5>
-                    <p class="card-text text-justify product">Producto 100% natural elaborado con concentrado de naranja y enriquecido con vitamina C.
+                    <p class="card-text product">Producto 100% natural elaborado con concentrado de naranja y enriquecido con vitamina C.
                     </p>
                       <button type="button" class="btn favoritos" accesskey="addNaranjaF">
-                        <span class="material-icons" accesskey="addNaranjaF">
+                        <span class="material-icons favoriteN" accesskey="addNaranjaF">
                           favorite_border
+                        </span>
+                        <span class="material-icons sizeC2 favorite5 escon" accesskey="addNaranjaF">
+                          favorite
                         </span>
                       </button>
                   </div>
