--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                     <h5 class="card-title">Jalapeño</h5>
                     <p class="card-text text-justify product">Coming Soon.
                     </p>
-                      <button type="button" class="btn favoritos" accesskey="addNaranjaF">
+                      <button type="button" class="btn" accesskey="addNaranjaF">
                         <span class="material-icons" accesskey="" disabled>
                           favorite_border
                         </span>
