--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@
               <h1 class="modal-title">Wishlist</h4>
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
-            
+            <div id="wishEmpty" class="col-md-8">
+              <img src="imagenes/favoritesEmpty.png" alt="">
+            </div>
             <!-- Modal body -->
-            <div class="modal-body">
+            <div class="modal-body" id="wishEmpty2">
               <div class="container">                                                                                   
                 <div class="table-responsive">
                   <table class="table">
@@ -239,12 +241,16 @@
           <div id="codepen">
             <div class="shopping-cart">
               <div class="modal-header">
-                <h1 class="modal-title">Wishlist</h4>
+                <h1 class="modal-title">Cart</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
               </div>
-              <label class="imagen col-md-8">
+              <!-- <label class="imagen col-md-8">
                 <p id="total2" class="carNot">Aún no has ingresado productos al Carrito</p>
-              </label>
+              </label> -->
+              <div id="total2" class="carNot " style="border:1px solid red; width: 100%;">
+                <!-- <p>Aún no has ingresado productos al Carrito</p> -->
+                <img src="imagenes/carEmpty.png" alt="">
+              </div>
               <div class="modal-body carFull">
                 <div class="container">
                   <div class="table-responsive">
